--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+
   }
-  
+button {
+    border-radius: 5px;
+}
+
+
   textarea {
     background: transparent;
     border: none;
@@ -19,6 +24,7 @@ body {
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
+    background-color: wheat;
   }
   
   .description {
@@ -47,6 +53,40 @@ body {
     color: white;
   }
   
+  .container {
+    width: 100%;
+    
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
+
+p {
+    color: black;
+    font-size:20px;
+    margin-top: 0;
+    margin-bottom: 0px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-right: 10px
+}
+
+footer{
+border-top: 10px solid black;
+margin-top: 100px;
+text-align: center;
+height: 100px;
+padding-top: 40px;
+background-color: whitesmoke;
+}
+
+
+
+  }
+
+
   .present {
     background-color: #ff6961;
     color: white;
